Update Parte 1 - Visualizando Repo1.ipynb

--- a/Parte 1 - Visualizando Repo1.ipynb
+++ b/Parte 1 - Visualizando Repo1.ipynb
@@ -79,9 +79,9 @@
     "\n",
     "website = 'https://repositorio.unp.edu.pe/handle/20.500.12676/3728?show=full'\n",
     "print('Haciendo una solicitud a:\\n')\n",
-    "print(url)\n",
+    "print(website)\n",
     "\n",
-    "unp = requests.get(url)\n",
+    "unp = requests.get(website)\n",
     "unp #Indica el status. 200 significa 'Respuesta satisfactoria'"
    ]
   },
@@ -1074,7 +1074,7 @@
     "\n",
     "    # a. Almacenar el texto en una 'sopa'\n",
     "    \n",
-    "soup = bs(pucp.text,'lxml') #'lxml' es el parse que pide la fx\n",
+    "soup = bs(unp.text,'lxml') #'lxml' es el parse que pide la fx\n",
     "                        # Lo que hace es dividir el texto en \n",
     "                            # pequenos pedazos identificables\n",
     "                        # El resultado es una 'sopa', asi se le dice\n",
