--- a/Reportefinal.ipynb
+++ b/Reportefinal.ipynb
@@ -33,6 +33,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd"
+   "Comenzamos instalando la librería request para una mejor petición o solicitud HTTP, luego importamos BeautifulSoup para poder extraer información de documentos HTML, sirve para la webscraping"
    ]
   },
   {
@@ -1207,6 +1208,7 @@
    "source": [
     "# 4. Automatización de la descarga en csv"
    ]
+   
   },
   {
    "cell_type": "code",
@@ -1216,6 +1218,7 @@
    "outputs": [],
    "source": [
     "df.to_csv('Reportefinal', encoding = 'utf-8')"
+   "Gracias a la herramienta de pandas hemos pasado el dataframe a un archivo con la extensión csv, para luego ser analizada en excel"
    ]
   },
   {
