--- a/Reportefinal.ipynb
+++ b/Reportefinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbb9603e",
+   "id": "80400ec8",
    "metadata": {},
    "source": [
     "Visitando repositorios de tesis de Estadística\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0319a16e",
+   "id": "4c7a8780",
    "metadata": {},
    "source": [
     "# 1. Importando las librerias a usar"
@@ -26,19 +26,21 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "518a0b24",
+   "id": "ac8abec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "import pandas as pd"
-   
+    "import pandas as pd\n",
+    "#Comenzamos instalando la librería request para una mejor petición o solicitud HTTP.\n",
+    "#Luego importamos BeautifulSoup para poder extraer información de documentos HTML, sirve para la webscraping.\"\n",
+    "#Por último pandas que será usado para el dataframe."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd81a71c",
+   "id": "955c810a",
    "metadata": {},
    "source": [
     "# 2. Leyendo el primer repositorio de la Universidad Nacional de Piura"
@@ -47,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1bbe8d19",
+   "id": "bc0b0a0c",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fc537492",
+   "id": "cfea35c8",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe0fd0f",
+   "id": "b9a428c2",
    "metadata": {},
    "source": [
     "# 3. Extraemos la información de la primera tesis en un orden adecuado "
@@ -1092,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7f8e7b4c",
+   "id": "5c4a49e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "89c1dabb",
+   "id": "03c55e5c",
    "metadata": {},
    "outputs": [
     {
@@ -1203,35 +1205,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed934259",
+   "id": "446e127e",
    "metadata": {},
    "source": [
     "# 4. Automatización de la descarga en csv"
    ]
-   
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1e8ee056",
+   "id": "580b3715",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Reportefinal', encoding = 'utf-8')"
+    "df.to_csv('Reportefinal', encoding = 'utf-8')\n",
+    "#Gracias a la herramienta de pandas hemos pasado el dataframe a un archivo con la extensión csv,\n",
+    "#para su posterior análisis en excel.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "703eb031",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a70c269f",
+   "id": "bf98b2d9",
    "metadata": {},
    "outputs": [],
    "source": []
