Mofificacion en ReporteFinal

--- a/Reportefinal.ipynb
+++ b/Reportefinal.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "80400ec8",
    "metadata": {},
    "source": [
     "## Visitando repositorios de tesis de Estadística Informática \n",
     "\n",
-    "Repositorios elegidos:\n",
+    "Los repositorios elegidos son:\n",
     "\n",
     "- Repositorio de Tesis de la Escuela Profesional de Estadística de la Universidad Nacional de Piura \n",
     "\n",
